# fast-api-dunossauro

./: pyproject.toml
fast_zero/: app.py  exercises.py
tests/: test_app.py
